--- a/estilos.css
+++ b/estilos.css
@@ -304,7 +304,7 @@ h3{
 
 #Grid article:nth-of-type(3){
     background-image: url(img/CezanneTulips.jpg);
-    background-position: middle;
+    background-position: center;
     background-size: cover;
     font-size: 1.5em;
 }
